--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -25,5 +25,5 @@
         // "allowSyntheticDefaultImports": true,
         // "importsNotUsedAsValues": "error"
     },
-    "extends": "../../tsconfig.json", 
+    "extends": "../../tsconfig.json"
 }
