--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@types/prettier": "^2.2.1",
+        "eslint": "^7.23.0",
         "lerna": "4.0.0",
         "prettier": "^2.2.1"
     },
