--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,8 @@
     "private": true,
     "scripts": {
         "start": "snowpack dev",
-        "build": "snowpack build"
+        "build": "snowpack build",
+        "lint": "eslint src/"
     },
     "dependencies": {
         "svelte": "^3.34.0",
@@ -19,6 +20,9 @@
         "@snowpack/plugin-typescript": "^1.2.1",
         "@tsconfig/svelte": "^1.0.10",
         "@types/snowpack-env": "^2.3.3",
+        "@typescript-eslint/eslint-plugin": "^4.20.0",
+        "@typescript-eslint/parser": "^4.20.0",
+        "eslint": "^7.23.0",
         "snowpack": "^3.0.13",
         "svelte-preprocess": "^4.6.9",
         "typescript": "^4.1"
