--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "dev": "tsnd --respawn ./src/server.ts",
         "start": "tsnd ./src/server.ts",
-        "update-service": "tsnd ./src/updateService.ts"
+        "update-service": "tsnd ./src/updateService.ts",
+        "lint": "eslint src/"
     },
     "dependencies": {
         "@types/node-fetch": "^2.5.8",
@@ -27,6 +28,9 @@
     },
     "devDependencies": {
         "@types/node": "14.14.37",
+        "@typescript-eslint/eslint-plugin": "^4.20.0",
+        "@typescript-eslint/parser": "^4.20.0",
+        "eslint": "^7.23.0",
         "ts-node-dev": "1.1.6",
         "typescript": "4.2.3"
     }
