--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
         "@types/snowpack-env": "^2.3.3",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
+        "autoprefixer": "^10.2.5",
         "eslint": "^7.23.0",
         "snowpack": "^3.0.13",
         "svelte-preprocess": "^4.6.9",
