--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,7 +6,7 @@
         // "target": "esnext",
         // "moduleResolution": "node",
         // "jsx": "preserve",
-        // "baseUrl": "./",
+        "baseUrl": "./"
         // /* paths - import rewriting/resolving */
         // "paths": {
         //     // If you configured any Snowpack aliases, add them here.
