--- a/packages/server/.eslintrc.json
+++ b/packages/server/.eslintrc.json
@@ -10,5 +10,7 @@
         "sourceType": "module"
     },
     "plugins": ["@typescript-eslint"],
-    "rules": {}
+    "rules": {
+        "@typescript-eslint/ban-ts-comment": 1
+    }
 }
