--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,13 +24,15 @@
         "fastify-static": "4.0.1",
         "node-fetch": "^2.6.1",
         "node-postgres": "^0.6.2",
-        "pg": "8.5.1"
+        "pg": "8.5.1",
+        "pino": "^6.11.2"
     },
     "devDependencies": {
         "@types/node": "14.14.37",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
         "eslint": "^7.23.0",
+        "pino-pretty": "^4.7.1",
         "ts-node-dev": "1.1.6",
         "typescript": "4.2.3"
     }
