Just getting prod to work easily.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "start": "yarn workspace @petrock/client start",
         "build": "yarn workspace @petrock/client build",
-        "serve": "yarn workspace @petrock/server dev",
+        "serve-dev": "yarn workspace @petrock/server dev",
+        "serve-prod": "NODE_ENV=production yarn workspace @petrock/server start",
         "updater-service": "yarn workspace @petrock/server update-service",
         "lint": "yarn workspace @petrock/client lint && yarn workspace @petrock/server lint",
         "boostrap": "lerna bootstrap",
