--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "yarn workspace @petrock/client build",
         "serve-dev": "yarn workspace @petrock/server dev",
         "serve-prod": "NODE_ENV=production yarn workspace @petrock/server start",
-        "updater-service": "yarn workspace @petrock/server update-service",
+        "update-service": "yarn workspace @petrock/server update-service",
         "lint": "yarn workspace @petrock/client lint && yarn workspace @petrock/server lint",
         "boostrap": "lerna bootstrap",
         "update": "yarn upgrade-interactive",
