--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,9 +6,9 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "tsnd --respawn ./src/server.ts",
-        "start": "ts-node ./src/server.ts --transpile-only",
-        "update-service": "ts-node ./src/db/serviceRunner.ts --transpile-only",
+        "dev": "NODE_ENV=development tsnd --respawn ./src/server.ts",
+        "start": "NODE_ENV=prouction ts-node ./src/server.ts --transpile-only",
+        "update-service": "NODE_ENV=production ts-node ./src/db/serviceRunner.ts --transpile-only",
         "lint": "eslint src/"
     },
     "dependencies": {
