Added pm2 config, updated env vars and scripts.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "private": true,
     "scripts": {
+        "clean-pm2": "pm2 delete ecosystem.config.js",
+        "production": "pm2 start ecosystem.config.js --env production",
+        "dev": "pm2 start ecosystem.config.js",
         "start": "yarn workspace @petrock/client start",
-        "build": "yarn workspace @petrock/client build",
-        "serve-dev": "yarn workspace @petrock/server dev",
-        "serve-prod": "NODE_ENV=production yarn workspace @petrock/server start",
-        "update-service": "yarn workspace @petrock/server update-service",
+        "build": "yarn workspace @petrock/client build && yarn workspace @petrock/server build",
+        "start-webserver": "yarn workspace @petrock/server start",
+        "start-service-runner": "yarn workspace @petrock/server service-runner",
         "lint": "yarn workspace @petrock/client lint && yarn workspace @petrock/server lint",
         "boostrap": "lerna bootstrap",
         "update": "yarn upgrade-interactive",
