--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,31 +1,31 @@
 {
     "name": "@petrock/client",
     "version": "0.1.0",
-    "description": "Leaderboard analytics & game database for RetroMMO.",
-    "author": "Rob Wagner <rob@robwagner.dev>",
-    "license": "MIT",
     "private": true,
+    "description": "Leaderboard analytics & game database for RetroMMO.",
+    "license": "MIT",
+    "author": "Rob Wagner <rob@robwagner.dev>",
     "scripts": {
-        "start": "snowpack dev",
         "build": "snowpack build",
-        "lint": "eslint src/"
+        "lint": "eslint src/",
+        "start": "snowpack dev"
     },
     "dependencies": {
-        "svelte": "^3.34.0",
+        "svelte": "^3.37.0",
         "svelte-spa-router": "^3.1.0"
     },
     "devDependencies": {
-        "@snowpack/plugin-dotenv": "^2.0.5",
-        "@snowpack/plugin-svelte": "^3.5.2",
+        "@snowpack/plugin-dotenv": "^2.1.0",
+        "@snowpack/plugin-svelte": "^3.6.1",
         "@snowpack/plugin-typescript": "^1.2.1",
         "@tsconfig/svelte": "^1.0.10",
         "@types/snowpack-env": "^2.3.3",
-        "@typescript-eslint/eslint-plugin": "^4.20.0",
-        "@typescript-eslint/parser": "^4.20.0",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
         "autoprefixer": "^10.2.5",
-        "eslint": "^7.23.0",
-        "snowpack": "^3.0.13",
-        "svelte-preprocess": "^4.6.9",
-        "typescript": "^4.1"
+        "eslint": "^7.24.0",
+        "snowpack": "^3.2.2",
+        "svelte-preprocess": "^4.7.0",
+        "typescript": "^4.2.4"
     }
 }
