--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
         "start": "snowpack dev"
     },
     "dependencies": {
+        "idb-keyval": "^5.0.5",
         "svelte": "^3.37.0",
         "svelte-spa-router": "^3.1.0"
     },
