--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,17 +16,17 @@
         "svelte-spa-router": "^3.1.0"
     },
     "devDependencies": {
-        "@snowpack/plugin-dotenv": "^2.1.0",
-        "@snowpack/plugin-svelte": "^3.6.1",
-        "@snowpack/plugin-typescript": "^1.2.1",
+        "@snowpack/plugin-dotenv": "2.0.5",
+        "@snowpack/plugin-svelte": "3.5.2",
+        "@snowpack/plugin-typescript": "1.2.1",
         "@tsconfig/svelte": "^1.0.10",
         "@types/snowpack-env": "^2.3.3",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
         "autoprefixer": "^10.2.5",
         "eslint": "^7.24.0",
-        "snowpack": "^3.2.2",
-        "svelte-preprocess": "^4.7.0",
+        "snowpack": "3.0.13",
+        "svelte-preprocess": "^4.6.9",
         "typescript": "^4.2.4"
     }
 }
