Fix tsconfig pulling in node types for client.

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["src", "packages/client/types/index.d.ts", "types/index.d.ts"],
+    "include": ["packages/client/types/index.d.ts"],
     "compilerOptions": {
         "types": ["svelte", "snowpack-env"],
         "module": "esnext",
