--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
         "update": "yarn upgrade-interactive"
     },
     "dependencies": {
-        "@types/pino": "^6.3.7"
+        "@types/pino": "7.0"
     },
     "devDependencies": {
-        "@types/prettier": "^2.2.3",
-        "eslint": "^7.24.0",
-        "lerna": "4.0.0",
-        "prettier": "^2.2.1"
+        "@types/prettier": "2.4",
+        "eslint": "8.6",
+        "lerna": "4.0",
+        "prettier": "2.5"
     }
 }
