--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,22 +11,22 @@
         "start": "snowpack dev"
     },
     "dependencies": {
-        "idb-keyval": "^5.0.5",
-        "svelte": "^3.37.0",
-        "svelte-spa-router": "^3.1.0"
+        "idb-keyval": "6.1",
+        "svelte": "3.46",
+        "svelte-spa-router": "3.2"
     },
     "devDependencies": {
-        "@snowpack/plugin-dotenv": "2.1.0",
-        "@snowpack/plugin-svelte": "3.6.1",
-        "@snowpack/plugin-typescript": "1.2.1",
-        "@tsconfig/svelte": "^1.0.10",
-        "@types/snowpack-env": "^2.3.3",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "autoprefixer": "^10.2.5",
-        "eslint": "^7.24.0",
-        "snowpack": "3.1.2",
-        "svelte-preprocess": "^4.7.1",
-        "typescript": "^4.2.4"
+        "@snowpack/plugin-dotenv": "2.2",
+        "@snowpack/plugin-svelte": "3.7",
+        "@snowpack/plugin-typescript": "1.2",
+        "@tsconfig/svelte": "3.0",
+        "@types/snowpack-env": "2.3",
+        "@typescript-eslint/eslint-plugin": "5.9",
+        "@typescript-eslint/parser": "5.9",
+        "autoprefixer": "10.4",
+        "eslint": "8.6",
+        "snowpack": "3.8",
+        "svelte-preprocess": "4.10",
+        "typescript": "4.5"
     }
 }
