--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,28 +12,28 @@
         "service-runner": "ts-node ./src/db/serviceRunner.ts --transpile-only"
     },
     "dependencies": {
-        "@types/node-fetch": "^2.5.10",
-        "@types/pg": "^7.14.11",
-        "dotenv": "^8.2.0",
-        "fastify": "3.14.1",
-        "fastify-cors": "5.2.0",
-        "fastify-esso": "1.2.2",
-        "fastify-formbody": "5.0.0",
-        "fastify-helmet": "5.3.1",
-        "fastify-postgres": "3.5.0",
-        "fastify-static": "4.2.4",
-        "node-fetch": "^2.6.1",
-        "node-postgres": "^0.6.2",
-        "pg": "8.6.0",
-        "pino": "^6.11.2"
+        "@types/node-fetch": "3.0",
+        "@types/pg": "8.6",
+        "dotenv": "11.0",
+        "fastify": "3.25",
+        "fastify-cors": "6.0",
+        "fastify-esso": "1.2",
+        "fastify-formbody": "5.2",
+        "fastify-helmet": "6.0",
+        "fastify-postgres": "3.6",
+        "fastify-static": "4.5",
+        "node-fetch": "3.1",
+        "node-postgres": "0.6",
+        "pg": "8.7",
+        "pino": "7.6"
     },
     "devDependencies": {
-        "@types/node": "14.14.37",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "eslint": "^7.24.0",
-        "pino-pretty": "^4.7.1",
-        "ts-node-dev": "1.1.6",
-        "typescript": "4.2.4"
+        "@types/node": "17.0",
+        "@typescript-eslint/eslint-plugin": "5.9",
+        "@typescript-eslint/parser": "5.9",
+        "eslint": "8.6",
+        "pino-pretty": "7.3",
+        "ts-node-dev": "1.1",
+        "typescript": "4.5"
     }
 }
