--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,30 +3,45 @@
     "version": "0.1.0",
     "private": true,
     "description": "Leaderboard analytics & game database for RetroMMO.",
-    "license": "MIT",
-    "author": "Rob Wagner <rob@robwagner.dev>",
+    "license": "MIT OR Apache-2.0",
+    "author": "Rob Wagner <rob@sombia.com>",
     "scripts": {
-        "build": "snowpack build",
-        "lint": "eslint src/",
-        "start": "snowpack dev"
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "fmt": "prettier --write **/*.{js,ts,svelte,html,css,cjs,mjs,json} --loglevel warn",
+        "lint": "eslint src/**/*.{js,ts,svelte}",
+        "lint:fix": "eslint --fix --fix-type problem,suggestion src/**/*.{js,ts,svelte}",
+        "tsc": "tsc --noEmit",
+        "tsc:watch": "tsc --noEmit --watch",
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "dependencies": {
-        "idb-keyval": "6.1",
-        "svelte": "3.46",
-        "svelte-spa-router": "3.2"
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.7",
+        "idb-keyval": "6.2.0",
+        "svelte": "^3.51.0",
+        "svelte-navigator": "^3.2.2"
     },
     "devDependencies": {
-        "@snowpack/plugin-dotenv": "2.2",
-        "@snowpack/plugin-svelte": "3.7",
-        "@snowpack/plugin-typescript": "1.2",
-        "@tsconfig/svelte": "3.0",
-        "@types/snowpack-env": "2.3",
-        "@typescript-eslint/eslint-plugin": "5.9",
-        "@typescript-eslint/parser": "5.9",
-        "autoprefixer": "10.4",
-        "eslint": "8.6",
-        "snowpack": "3.8",
-        "svelte-preprocess": "4.10",
-        "typescript": "4.5"
+        "@sveltejs/vite-plugin-svelte": "^1.0.9",
+        "@typescript-eslint/eslint-plugin": "^5.40.0",
+        "@typescript-eslint/parser": "^5.40.0",
+        "autoprefixer": "^10.4.12",
+        "dotenv": "^16.0.3",
+        "eslint": "^8.25.0",
+        "eslint-plugin-svelte3": "^4.0.0",
+        "happy-dom": "^7.5.12",
+        "postcss": "^8.4.18",
+        "postcss-load-config": "^4.0.1",
+        "prettier": "^2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
+        "svelte-language-server": "^0.14.37",
+        "svelte-preprocess": "^4.10.7",
+        "tailwindcss": "^3.1.8",
+        "typescript": "^4.8.4",
+        "vite": "^3.1.8",
+        "vitest": "^0.24.3"
     }
 }
