--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,32 +1,40 @@
 {
-    "include": ["src/**/*"],
     "compilerOptions": {
-        "types": ["svelte", "snowpack-env"],
-        "module": "esnext",
         "target": "esnext",
+        "module": "esnext",
         "moduleResolution": "node",
-        "jsx": "preserve",
-        "baseUrl": "./",
-        /* paths - import rewriting/resolving */
-        "paths": {
-            // If you configured any Snowpack aliases, add them here.
-            // Add this line to get types for streaming imports (packageOptions.source="remote"):
-            //     "*": [".snowpack/types/*"]
-            // More info: https://www.snowpack.dev/guides/streaming-imports
-        },
-        /* noEmit - Snowpack builds (emits) files, not tsc. */
-        "noEmit": true,
-        /* Additional Options */
-        "strict": false,
+        "lib": ["esnext", "DOM"],
+
+        "rootDir": "src",
+        "outDir": "dist",
+
+        "strict": true,
+        "alwaysStrict": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
+
         "esModuleInterop": true,
-        "skipLibCheck": true,
+
         "forceConsistentCasingInFileNames": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noFallthroughCasesInSwitch": true,
+
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
+
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "downlevelIteration": true,
+        "declaration": true,
+
         "resolveJsonModule": true,
-        "useDefineForClassFields": true,
-        "allowSyntheticDefaultImports": true,
-        "importsNotUsedAsValues": "error",
-        "isolatedModules": true,
-        "preserveValueImports": true
+
+        "pretty": true,
+        "types": ["vitest/importMeta", "vite/client"]
     },
-    "extends": "@tsconfig/svelte/tsconfig.json"
+    "include": ["src/**/*", "*.d.ts"],
+    "exclude": ["node_modules"]
 }
