--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,7 @@ dist
 build
 target
 node_modules
-
-# Yarn v2 (Zero-Installs)
-.yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+__OLDSERVER
 
 # Files
 .log
