Update env template for vite static replacement of environment vars

--- a/client/.env.template
+++ b/client/.env.template
@@ -1,4 +1,4 @@
 TAILWIND_MODE=watch
 BUILD_PATH=../server/dist
-API_URL=https://petrock.gg
-TICK_RATE=30000
+VITE_API_URL=https://petrock.gg
+VITE_TICK_RATE=30000
