--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
         "svelte-language-server": "^0.14.37",
         "svelte-preprocess": "^4.10.7",
         "tailwindcss": "^3.1.8",
+        "terser": "^5.15.1",
         "typescript": "^4.8.4",
         "vite": "^3.1.8",
         "vitest": "^0.24.3"
