--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,34 +4,26 @@
         "module": "esnext",
         "moduleResolution": "node",
         "lib": ["esnext", "DOM"],
-
         "rootDir": "src",
         "outDir": "dist",
-
         "strict": true,
         "alwaysStrict": true,
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
-
         "esModuleInterop": true,
-
         "forceConsistentCasingInFileNames": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "noFallthroughCasesInSwitch": true,
-
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "downlevelIteration": true,
         "declaration": true,
-
-        "resolveJsonModule": true,
-
+        "skipLibCheck": true,
         "pretty": true,
         "types": ["vitest/importMeta", "vite/client"]
     },
