--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "description": "Leaderboard analytics & game database for RetroMMO.",
     "license": "MIT OR Apache-2.0",
     "author": "Rob Wagner <rob@sombia.com>",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -22,28 +23,28 @@
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.8",
         "idb-keyval": "6.2.0",
-        "svelte": "^3.53.1",
+        "svelte": "^3.55.0",
         "svelte-navigator": "^3.2.2"
     },
     "devDependencies": {
-        "@sveltejs/vite-plugin-svelte": "^1.2.0",
-        "@typescript-eslint/eslint-plugin": "^5.44.0",
-        "@typescript-eslint/parser": "^5.44.0",
+        "@sveltejs/vite-plugin-svelte": "^2.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.46.1",
+        "@typescript-eslint/parser": "^5.46.1",
         "autoprefixer": "^10.4.13",
         "dotenv": "^16.0.3",
-        "eslint": "^8.28.0",
+        "eslint": "^8.30.0",
         "eslint-plugin-svelte3": "^4.0.0",
-        "happy-dom": "^7.7.0",
-        "postcss": "^8.4.19",
+        "happy-dom": "^8.1.0",
+        "postcss": "^8.4.20",
         "postcss-load-config": "^4.0.1",
-        "prettier": "^2.7.1",
-        "prettier-plugin-tailwindcss": "^0.1.13",
-        "svelte-language-server": "^0.14.37",
-        "svelte-preprocess": "^4.10.7",
+        "prettier": "^2.8.1",
+        "prettier-plugin-tailwindcss": "^0.2.1",
+        "svelte-language-server": "^0.14.39",
+        "svelte-preprocess": "^5.0.0",
         "tailwindcss": "^3.2.4",
-        "terser": "^5.15.1",
-        "typescript": "^4.9.3",
-        "vite": "^3.2.4",
-        "vitest": "^0.25.2"
+        "terser": "^5.16.1",
+        "typescript": "^4.9.4",
+        "vite": "^4.0.2",
+        "vitest": "^0.25.8"
     }
 }
